[package]
name = "rust-libcore"
version = "0.0.1"
authors = ["The Rust Developers Team"]
build = "./build.rs"
description = "Libcore wrapped into cargo package, suitable for cross-builds"
license-file = "COPYRIGHT"
repository = "https://github.com/rust-lang/rust"

[lib]
name = "core"
path = "rust/src/libcore/lib.rs"
