[package]
name = "rustc_unicode"
version = "0.0.3"
authors = ["The Rust Developers Team"]
build = "./build.rs"
description = "Libcore wrapped into cargo package, suitable for cross-builds"
license-file = "COPYRIGHT"
repository = "https://github.com/mgottschlag/rust-librustc_unicode"

[lib]
name = "rustc_unicode"
path = "rust/src/librustc_unicode/lib.rs"

[dependencies]
rust-libcore = "*"
